# types/gen/go/api/v1/service.pb.validate.go
@@ -875,6 +875,8 @@ func (m *ExecuteV3Request) validate(all bool) error {
 
 	}
 
+	// no validation rules for IncludeDiagnostics
+
 	if m.CommitId != nil {
 		// no validation rules for CommitId
 	}
@@ -1454,6 +1456,40 @@ func (m *AwaitResponse) validate(all bool) error {
 			if err := v.Validate(); err != nil {
 				return AwaitResponseValidationError{
 					field:  fmt.Sprintf("Events[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	for idx, item := range m.GetDiagnostics() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, AwaitResponseValidationError{
+						field:  fmt.Sprintf("Diagnostics[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, AwaitResponseValidationError{
+						field:  fmt.Sprintf("Diagnostics[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return AwaitResponseValidationError{
+					field:  fmt.Sprintf("Diagnostics[%v]", idx),
 					reason: "embedded message failed validation",
 					cause:  err,
 				}
