# workers/javascript/packages/server/src/plugin-property/plugin-props.ts
@@ -62,6 +62,9 @@ export class PluginProps {
   @StreamProperty()
   useWasmBindingsSandbox?: boolean;
 
+  @StreamProperty()
+  includeDiagnostics?: boolean;
+
   store?: KVStore;
 
   version?: string;
